# seL4_LS1046A

./: .gitignore  README.md  log  manifest.txt
apps/comm/: CMakeLists.txt  README.md  comm.camkes  settings.cmake
apps/comm-smaccm/: CMakeLists.txt  settings.cmake
apps/comm-smaccm/components/Decrypt/: Decrypt.camkes
apps/comm-smaccm/components/Decrypt/include/: commsecDecodeState_monitor.h  commsecDecodeStaticKey_monitor.h
apps/comm-smaccm/components/Decrypt/src/: commsecDecodeStaticKey_monitor.c  frameBuffer_monitor.c
apps/comm-smaccm/components/Encrypt/src/: Encrypt.c
apps/comm-smaccm/components/Monitors/Encrypt_server2self_Monitor/src/: Encrypt_server2self_Monitor.c
apps/comm-smaccm/components/Monitors/Server_decrypt2self_Monitor/: Server_decrypt2self_Monitor.camkes
apps/comm-smaccm/components/Server/include/: Server.h
apps/comm-smaccm/components/dispatch_periodic/: dispatch_periodic.camkes
apps/comm-smaccm/components/dispatch_periodic/src/: dispatch_periodic.c
apps/comm-smaccm/test/: t.c
apps/comm/components/Decrypt/: Decrypt.camkes
apps/comm/components/Decrypt/include/: Decrypt.h  frameBuffer_monitor.h  ivory_serialize.h  output_self2server_enqueue_monitor.h
apps/comm/components/Decrypt/src/: Decrypt.c  commsecDecodeState_monitor.c  output_self2server_enqueue_monitor.c
apps/comm/components/Encrypt/: Encrypt.camkes
apps/comm/components/Encrypt/src/: Encrypt.c
apps/comm/components/Monitors/Encrypt_server2self_Monitor/: Encrypt_server2self_Monitor.camkes
apps/comm/components/Monitors/Server_decrypt2self_Monitor/src/: Server_decrypt2self_Monitor.c
apps/comm/components/Server/: Server.camkes
apps/comm/components/Server/include/: Server.h  controllableVehicleConsumerInput_monitor.h  controllableVehicleConsumerOutput_monitor.h  controllableVehicleProducerInput_monitor.h  input_decrypt2self_dequeue_monitor.h  input_framing2self_dequeue_monitor.h  input_vm2self_read_monitor.h  output_self2encrypt_enqueue_monitor.h  output_self2framing_enqueue_monitor.h  output_self2vm_reboot_enqueue_monitor.h  reboot_req_unwrapper_monitor.h  smaccm_camera_module.h
apps/comm/components/Server/src/: Server.c  controllableVehicleConsumerInput_monitor.c  controllableVehicleConsumerOutput_monitor.c  controllableVehicleProducerInput_monitor.c  input_decrypt2self_dequeue_monitor.c  input_framing2self_dequeue_monitor.c  input_vm2self_read_monitor.c  output_self2encrypt_enqueue_monitor.c  output_self2framing_enqueue_monitor.c  output_self2vm_reboot_enqueue_monitor.c  reboot_req_unwrapper_monitor.c
apps/comm/components/UART/: UART.camkes
apps/comm/components/UART/src/: UART.c
apps/comm/components/dispatch_periodic/: dispatch_periodic.camkes
apps/comm/components/dispatch_periodic/src/: dispatch_periodic.c
apps/comm/include/: smaccm_types.h  top_types.h
apps/comm/interfaces/: Decrypt2Server.idl4  Monitor_SMACCM_DATA__GIDL.idl4
apps/comm/test/: t.c
apps/dencypt-test/: Makefile  README.md  dencrypt-test
apps/dencypt-test/src/: main.c
apps/empty/: CMakeLists.txt
apps/empty/src/: empty.c
apps/hello/: CMakeLists.txt
apps/hello-camkes-1/: CMakeLists.txt  hello-1.camkes
apps/hello-camkes-1/components/Client/src/: client.c
apps/hello-camkes-1/components/Echo/src/: echo.c
apps/hello-camkes-1/interfaces/: HelloSimple.idl4
apps/hello-camkes-2/: CMakeLists.txt  hello-2.camkes
apps/hello-camkes-2/components/Client/: Client.camkes
apps/hello-camkes-2/components/Client/src/: client.c
apps/hello-camkes-2/components/Echo/: Echo.camkes
apps/hello-camkes-2/components/Echo/src/: echo.c
apps/hello-camkes-2/include/: str_buf.h
apps/uart/: CMakeLists.txt
apps/uart-test/: CMakeLists.txt  settings.cmake  uart-test.camkes
apps/uart-test/components/UART/src/: uart.c
apps/uart-test/include/: type.h
apps/uart/components/Client/src/: client.c
apps/uart/components/Driver/src/: driver.c
apps/uart/interfaces/: uart.idl4
backup/USB/: README.md  config.ini  kernel.dtb  ls1046ardb_update.scr
backup/USB/boot/: fsl-ok1046a-1040-5506-c3.dtb  ls1046ardb_boot.scr
diffs/: kernel.patch  sel4-tutorials  util_libs
diffs/projects/: global-components.patch  sel4-tutorials.patch  util_libs.patch
diffs/tools/: seL4.patch
docs/: comm.drawio
dtb/freescale/: fsl-ls1046a-qds.dtb
dtb2dts/freescale/: fsl-ls1046a-qds.dts  fsl-ok1046a-1133-5a59-c2.dts
dts/dtb/freescale/: fsl-ls1046a-rdb.dtb  fsl-ok1046a-1133-5a59-c2.dtb
dts/dtb2dts/freescale/: fsl-ls1046a-rdb.dts
dts/freescale/: o
itb/: image.its
kernel/: .gitignore
kernel/libsel4/sel4_plat_include/ls1046a/sel4/plat/api/: constants.h
kernel/src/drivers/serial/: config.cmake  ns16550a-uart.c
kernel/src/drivers/smmu/: smmuv2.c
kernel/src/plat/bcm2711/: overlay-rpi4.dts
kernel/src/plat/ls1046a/: config.cmake  overlay-ls1046a.dts
kernel/tools/: hardware.yml  helpers.cmake
kernel/tools/dts/: ok1046a-c2.dts  rpi4.dts
scripts/: build-app.sh  build-kernel.sh  common-env.sh  diff-projects.sh  get-manifest.sh  git-push-projects.sh  patch-diffs.sh  patch-projects.sh  simulate-qemu.sh
tools/seL4/cmake-tool/helpers/: application_settings.cmake
tools/seL4/elfloader-tool/: CMakeLists.txt
tools/seL4/elfloader-tool/src/arch-arm/armv/armv8-a/64/: mmu.S
tools/seL4/elfloader-tool/src/binaries/efi/gnuefi/: elf_aarch64_efi.lds
tools/seL4/elfloader-tool/src/drivers/uart/: ns16550a-uart.c
tools/seL4/elfloader-tool/src/plat/ls1046a/: platform_init.c
